--- a/style.css
+++ b/style.css
@@ -169,11 +169,48 @@ audio{
         height: 160%;
     }
     #main-song-area{
-        height: 160%;
+        height: 170%;
     }
     
     
 } 
+
+
+@media screen and (max-width: 425px){
+    audio{
+        width: 60%
+    }
+    .music{
+        margin: 5rem  .6rem;
+
+    }
+    .main{
+        height: 160%;
+    }
+    #main-song-area{
+        height: 235%;
+    }
+    
+    
+} 
+
+@media screen and (max-width: 375px){
+    audio{
+        width: 60%
+    }
+    .music{
+        margin: 5rem  .6rem;
+
+    }
+    .main{
+        height: 160%;
+    }
+    #main-song-area{
+        height: 255%;
+    }
+    
+    
+}
 
 
 @media screen and (max-width: 320px){
@@ -188,11 +225,31 @@ audio{
         height: 160%;
     }
     #main-song-area{
-        height: 225%;
+        height: 275%;
     }
     
     
 } 
+
+@media screen and (max-width: 260px){
+    audio{
+        width: 60%
+    }
+    .music{
+        margin: 5rem  .6rem;
+
+    }
+    .main{
+        height: 160%;
+    }
+    #main-song-area{
+        height: 295%;
+    }
+    
+    
+} 
+
+
 
 audio::-webkit-media-controls-panel {
     background-color: rgba(213, 226, 233, 0.986);
